<resources>
    <string name="app_name">Oleg Money</string>
    <string name="gcp_id">616434022796-prgu8rm9b6jcnuie5q5nmga15lb50q6u.apps.googleusercontent.com</string>

    <string name="gain_total_control_of_your_money">Gain total control of your money</string>
    <string name="become_your_own_money_manager_and_make_every_cent_count">Become your own money manager and make every cent count</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="verification">Verification</string>
    <string name="login">Login</string>
    <string name="know_where_your_money_goes">Know where your money goes</string>
    <string name="planning_ahead">Planning ahead</string>
    <string name="track_your_transaction_easily_with_categories_and_financial_report">Track your transaction easily, with categories and financial report </string>
    <string name="setup_your_budget_for_each_category_so_you_in_control">Setup your budget for each category so you in control</string>
    <string name="signup_terms_condition">By signing up, you agree to the `-`Terms of Service and Privacy Policy`-`</string>
    <string name="signup_with_google">Sign Up with Google</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account_yet">Don’t have an account yet?</string>
    <string name="enter_your_verification_code">Enter your Verification Code</string>
    <string name="we_send_verification_code_to_your_email">We send verification code to your email %s. You can check your inbox.</string>
    <string name="i_didnt_received_the_code">I didn’t received the code? Send again</string>
    <string name="verify">Verify</string>
</resources>